Add SendNotificationJob and the entire sending flow
